--- a/style.css
+++ b/style.css
@@ -1,26 +1,71 @@
-header {
-  background-image: url(nightSky.jpg);
-  background-size: cover;
-}
-body {
-  font-family: Arial, Helvetica, sans-serif;
-}
-button {
-  background: black;
-  color: white;
-  border-radius: 12px;
-  padding: 20px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
+html, body {
   font-size: 16px;
-  margin: 4px 2px;
+  font-family: Arial, Helvetica, sans-serif;
+  height: 100%;
+  width: 100%;
+  text-align: center;
+  background-color: white;
+  color: black;
+  scroll-behavior: smooth;
 }
-ul {
-  list-style-type: none;
-  margin: 0;
+
+.nav {
+  display: flex;
+  justify-content: center;
+  background-color: black;
+}
+
+
+.nav ul {
+  text-align: center;
+  list-style: none;
+  margin: 0 auto;
   padding: 0;
+  display: flex;
+  gap: 80px;
 }
+
+.nav ul li {
+  transition: background 1s;
+}
+
+.nav ul li:hover {
+  opacity: .5;
+  cursor: pointer;
+  transition: background .3s;
+}
+
+.nav ul li a {
+  color: white;
+  text-decoration: none;
+  font-size: 1.5em;
+  scroll-behavior: smooth;
+}
+
+.homepage {
+  background-image: url(darkmountain.jpg);
+  background-size: cover;
+  height: 100%;
+  width: 100%;
+}
+
+.intro {
+  position: absolute;
+  color: white;
+  top: 50%;
+  left: 50%;
+  font-size: 2em;
+  transform: translate(-50%, -50%);
+}
+
+.photo {
+  display: inline-block;
+  width: 250px;
+  height: 250px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
 li {
   display: inline;
 }
