--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 html, body {
+  margin: 0;
   font-size: 16px;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Verdana, Helvetica, sans-serif;
   height: 100%;
   width: 100%;
   text-align: center;
@@ -10,9 +11,12 @@ html, body {
 }
 
 .nav {
+  position: absolute;
+  padding-top: 15px;
   display: flex;
   justify-content: center;
-  background-color: black;
+  width: 100%;
+  text-align: center;
 }
 
 
@@ -22,7 +26,7 @@ html, body {
   margin: 0 auto;
   padding: 0;
   display: flex;
-  gap: 80px;
+  gap: 40px;
 }
 
 .nav ul li {
@@ -36,7 +40,7 @@ html, body {
 }
 
 .nav ul li a {
-  color: white;
+  color: rgb(235, 239, 243);
   text-decoration: none;
   font-size: 1.5em;
   scroll-behavior: smooth;
@@ -51,7 +55,7 @@ html, body {
 
 .intro {
   position: absolute;
-  color: white;
+  color: rgb(235, 239, 243);
   top: 50%;
   left: 50%;
   font-size: 2em;
@@ -66,6 +70,41 @@ html, body {
   object-fit: cover;
 }
 
+#about {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  font-size: 2em;
+  background-color: rgb(214, 224, 228);
+}
+
+.personalinfo {
+  display: flex;
+  width: 50%;
+  margin-bottom: 25px;
+}
+
 li {
   display: inline;
+}
+
+#projects {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  font-size: 2em;
+}
+
+#contact {
+  padding-top: 20px;
+  background-color: rgb(239, 241, 241);
+  font-size: 1.5em;
+}
+
+.socials {
+  display: flex;
+  justify-content: center;
+  gap: 60px;
+  text-align: center;
+  height: 40px;
 }
