--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ html, body {
 .nav ul li:hover {
   opacity: .5;
   cursor: pointer;
-  transition: background .3s;
+  transition: background .5s;
 }
 
 .nav ul li a {
@@ -58,14 +58,15 @@ html, body {
   color: rgb(235, 239, 243);
   top: 50%;
   left: 50%;
-  font-size: 2em;
+  font-size: 2.3em;
   transform: translate(-50%, -50%);
 }
 
+
 .photo {
   display: inline-block;
-  width: 250px;
-  height: 250px;
+  width: 280px;
+  height: 280px;
   border-radius: 50%;
   object-fit: cover;
 }
@@ -75,7 +76,7 @@ html, body {
   align-items: center;
   flex-direction: column;
   font-size: 2em;
-  background-color: rgb(214, 224, 228);
+  background-color: rgb(207, 221, 226);
 }
 
 .personalinfo {
@@ -93,11 +94,36 @@ li {
   align-items: center;
   flex-direction: column;
   font-size: 2em;
+  padding-bottom: 60px;
+  background-color: rgb(230, 236, 236);
+}
+
+.grid-container {
+  display: grid;
+  width: 50%;
+  grid-template-columns: repeat(auto-fill,minmax(250px, 1fr));
+  gap: 80px;
+}
+
+.grid-container div {
+  height: 300px;
+  width: 300px;
+  background-size: cover;
+  background-position: center;
+}
+
+.grid-container div:hover {
+  color: black;
+  opacity: 0.8;
+}
+
+#item1 {
+  background-image: url(gf.JPEG);
 }
 
 #contact {
   padding-top: 20px;
-  background-color: rgb(239, 241, 241);
+  background-color: rgb(236, 245, 245);
   font-size: 1.5em;
 }
 
