--- a/style.css
+++ b/style.css
@@ -58,18 +58,18 @@ li {
 }
 
 .intro {
-  position: absolute;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
   color: rgb(228, 238, 238);
-  top: 50%;
-  left: 50%;
   font-size: 2.3em;
-  transform: translate(-50%, -50%);
 }
 
 
 .photo {
-  display: inline-block;
-  position: relative;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
   top: 10px;
   width: 350px;
   height: 350px;
